--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ override.tf.json
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
 .terraform.lock.hcl
+.DS_Store
+
+# how to remove all .DS_Store from git history
+# https://stackoverflow.com/questions/107701/how-can-i-remove-ds-store-files-from-a-git-repository
